P2/results/1a/test_fpgaq/nlpkkt200_2_nodes_1_tasks_16_threads-708881-stderr.txt
srun: defined options
srun: -------------------- --------------------
srun: (null)              : n[051-052]
srun: cpus-per-task       : 16
srun: distribution        : block:block
srun: jobid               : 708881
srun: job-name            : nlpkkt200_2_nodes_1_tasks_16_threads
srun: nodes               : 2
srun: ntasks              : 2
srun: ntasks-per-node     : 1
srun: verbose             : 1
srun: -------------------- --------------------
srun: end of defined options
srun: jobid 708881: nodes(2):`n[051-052]', cpu counts: 32(x2)
srun: Implicitly setting --exact, because -c/--cpus-per-task given.
srun: launch/slurm: launch_p_step_launch: CpuBindType=(null type)
srun: launching StepId=708881.0 on host n051, 1 tasks: 0
srun: launching StepId=708881.0 on host n052, 1 tasks: 1
srun: route/default: init: route default plugin loaded
srun: launch/slurm: _task_start: Node n051, 1 tasks started
srun: launch/slurm: _task_start: Node n052, 1 tasks started
srun: Sent KVS info to 2 nodes, up to 1 tasks per node
srun: Sent KVS info to 2 nodes, up to 1 tasks per node
[n052:1064653:0:1064653]       ud_ep.c:268  Fatal: UD endpoint 0x555555aa9900 to <no debug data>: unhandled timeout error

/cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/ib/ud/base/ud_ep.c: [ uct_ud_ep_deferred_timeout_handler() ]
      ...
      265                                      &ep->super.super,
      266                                      UCS_ERR_ENDPOINT_TIMEOUT);
      267     if (status != UCS_OK) {
==>   268         ucs_fatal("UD endpoint %p to "UCT_UD_EP_PEER_NAME_FMT": "
      269                   "unhandled timeout error",
      270                   ep, UCT_UD_EP_PEER_NAME_ARG(ep));
      271     }

==== backtrace (tid:1064653) ====
 0 0x000000000007b61b uct_ud_ep_deferred_timeout_handler()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/ib/ud/base/ud_ep.c:268
 1 0x0000000000025f1a ucs_callbackq_slow_proxy()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucs/datastruct/callbackq.c:404
 2 0x000000000004a2ba ucs_callbackq_dispatch()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucs/datastruct/callbackq.h:211
 3 0x000000000004a2ba uct_worker_progress()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/api/uct.h:2589
 4 0x000000000004a2ba ucp_worker_progress()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucp/core/ucp_worker.c:2636
 5 0x00000000000054df mca_pml_ucx_send()  ???:0
 6 0x00000000000bc55b ompi_coll_base_barrier_intra_recursivedoubling()  ???:0
 7 0x000000000006b950 MPI_Barrier()  ???:0
 8 0x0000000000002330 main()  ???:0
 9 0x0000000000029d90 __libc_start_call_main()  ./csu/../sysdeps/nptl/libc_start_call_main.h:58
10 0x0000000000029e40 __libc_start_main_impl()  ./csu/../csu/libc-start.c:392
11 0x0000000000029e40 __libc_start_main_impl()  ./csu/../csu/libc-start.c:379
12 0x0000000000002865 _start()  ???:0
=================================
[n052:1064653] *** Process received signal ***
[n052:1064653] Signal: Aborted (6)
[n052:1064653] Signal code:  (-6)
[n052:1064653] [ 0] /lib/x86_64-linux-gnu/libc.so.6(+0x42520)[0x155554e19520]
[n052:1064653] [ 1] /lib/x86_64-linux-gnu/libc.so.6(pthread_kill+0x12c)[0x155554e6d9fc]
[n052:1064653] [ 2] /lib/x86_64-linux-gnu/libc.so.6(raise+0x16)[0x155554e19476]
[n052:1064653] [ 3] /lib/x86_64-linux-gnu/libc.so.6(abort+0xd3)[0x155554dff7f3]
[n052:1064653] [ 4] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(+0x30a37)[0x155554072a37]
[n052:1064653] [ 5] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(ucs_fatal_error_format+0x122)[0x155554072b62]
[n052:1064653] [ 6] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/ucx/libuct_ib.so.0(+0x7b61b)[0x15554f76b61b]
[n052:1064653] [ 7] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(+0x25f1a)[0x155554067f1a]
[n052:1064653] [ 8] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucp.so.0(ucp_worker_progress+0x7a)[0x15554f9ee2ba]
[n052:1064653] [ 9] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/openmpi/mca_pml_ucx.so(mca_pml_ucx_send+0x1bf)[0x1555540bc4df]
[n052:1064653] [10] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/libmpi.so.40(ompi_coll_base_barrier_intra_recursivedoubling+0xcb)[0x15555548e55b]
[n052:1064653] [11] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/libmpi.so.40(MPI_Barrier+0xb0)[0x15555543d950]
[n052:1064653] [12] /home/krisor99/SpMV-Comm-Strats/P2/build/Debug/1a(+0x2330)[0x555555556330]
[n052:1064653] [13] /lib/x86_64-linux-gnu/libc.so.6(+0x29d90)[0x155554e00d90]
[n052:1064653] [14] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0x80)[0x155554e00e40]
[n052:1064653] [15] /home/krisor99/SpMV-Comm-Strats/P2/build/Debug/1a(+0x2865)[0x555555556865]
[n052:1064653] *** End of error message ***
srun: launch/slurm: _task_finish: Received task exit notification for 1 task of StepId=708881.0 (status=0x0086).
srun: error: n052: task 1: Aborted (core dumped)
[n051:1056098:0:1056098]       ud_ep.c:268  Fatal: UD endpoint 0x5555558d9d50 to <no debug data>: unhandled timeout error

/cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/ib/ud/base/ud_ep.c: [ uct_ud_ep_deferred_timeout_handler() ]
      ...
      265                                      &ep->super.super,
      266                                      UCS_ERR_ENDPOINT_TIMEOUT);
      267     if (status != UCS_OK) {
==>   268         ucs_fatal("UD endpoint %p to "UCT_UD_EP_PEER_NAME_FMT": "
      269                   "unhandled timeout error",
      270                   ep, UCT_UD_EP_PEER_NAME_ARG(ep));
      271     }

==== backtrace (tid:1056098) ====
 0 0x000000000007b61b uct_ud_ep_deferred_timeout_handler()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/ib/ud/base/ud_ep.c:268
 1 0x0000000000025f1a ucs_callbackq_slow_proxy()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucs/datastruct/callbackq.c:404
 2 0x000000000004a2ba ucs_callbackq_dispatch()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucs/datastruct/callbackq.h:211
 3 0x000000000004a2ba uct_worker_progress()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/api/uct.h:2589
 4 0x000000000004a2ba ucp_worker_progress()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucp/core/ucp_worker.c:2636
 5 0x00000000000054df mca_pml_ucx_send()  ???:0
 6 0x00000000000bc55b ompi_coll_base_barrier_intra_recursivedoubling()  ???:0
 7 0x000000000006b950 MPI_Barrier()  ???:0
 8 0x0000000000002330 main()  ???:0
 9 0x0000000000029d90 __libc_start_call_main()  ./csu/../sysdeps/nptl/libc_start_call_main.h:58
10 0x0000000000029e40 __libc_start_main_impl()  ./csu/../csu/libc-start.c:392
11 0x0000000000029e40 __libc_start_main_impl()  ./csu/../csu/libc-start.c:379
12 0x0000000000002865 _start()  ???:0
=================================
[n051:1056098] *** Process received signal ***
[n051:1056098] Signal: Aborted (6)
[n051:1056098] Associated errno: Unknown error 21845 (21845)
[n051:1056098] Signal code:  (1444703592)
[n051:1056098] [ 0] /lib/x86_64-linux-gnu/libc.so.6(+0x42520)[0x155554e19520]
[n051:1056098] [ 1] /lib/x86_64-linux-gnu/libc.so.6(pthread_kill+0x12c)[0x155554e6d9fc]
[n051:1056098] [ 2] /lib/x86_64-linux-gnu/libc.so.6(raise+0x16)[0x155554e19476]
[n051:1056098] [ 3] /lib/x86_64-linux-gnu/libc.so.6(abort+0xd3)[0x155554dff7f3]
[n051:1056098] [ 4] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(+0x30a37)[0x155554072a37]
[n051:1056098] [ 5] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(ucs_fatal_error_format+0x122)[0x155554072b62]
[n051:1056098] [ 6] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/ucx/libuct_ib.so.0(+0x7b61b)[0x15554f76b61b]
[n051:1056098] [ 7] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(+0x25f1a)[0x155554067f1a]
[n051:1056098] [ 8] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucp.so.0(ucp_worker_progress+0x7a)[0x15554f9ee2ba]
[n051:1056098] [ 9] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/openmpi/mca_pml_ucx.so(mca_pml_ucx_send+0x1bf)[0x1555540bc4df]
[n051:1056098] [10] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/libmpi.so.40(ompi_coll_base_barrier_intra_recursivedoubling+0xcb)[0x15555548e55b]
[n051:1056098] [11] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/libmpi.so.40(MPI_Barrier+0xb0)[0x15555543d950]
[n051:1056098] [12] /home/krisor99/SpMV-Comm-Strats/P2/build/Debug/1a(+0x2330)[0x555555556330]
[n051:1056098] [13] /lib/x86_64-linux-gnu/libc.so.6(+0x29d90)[0x155554e00d90]
[n051:1056098] [14] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0x80)[0x155554e00e40]
[n051:1056098] [15] /home/krisor99/SpMV-Comm-Strats/P2/build/Debug/1a(+0x2865)[0x555555556865]
[n051:1056098] *** End of error message ***
srun: launch/slurm: _task_finish: Received task exit notification for 1 task of StepId=708881.0 (status=0x0086).
srun: error: n051: task 0: Aborted (core dumped)
